Bug 1506800 - Don't sent AppleDouble for files with extension unless whitelisted. r=mkmelin